Fix h1 spacing with css

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ a, a:visited {
 
 h1 {
   text-align: center;
+  padding: 64px;
 }
 
 h2 {
